Update ECPrivateKeyImpl